<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/add_new_note"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_noteTitle_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_item"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteHeaderText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_noteDetail_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/corner_bg"
        android:ems="10"
        android:gravity="start|center_horizontal"
        android:hint="@string/noteDetail_hint"
        android:inputType="textMultiLine"
        android:lines="5"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_noteTitle_id"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_noteTitle_id"
        app:layout_constraintTop_toBottomOf="@+id/et_noteTitle_id" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_saveNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/cornered_button"
        android:text="@string/save_note"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_noteDetail_id"
        app:layout_constraintStart_toStartOf="@+id/et_noteDetail_id"
        app:layout_constraintTop_toBottomOf="@+id/et_noteDetail_id" />


</androidx.constraintlayout.widget.ConstraintLayout>