<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="35dp"
                android:layout_toStartOf="@+id/textAlert"
                android:background="@drawable/cornered_button"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textAllCaps="false" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAlert"
                android:layout_alignBottom="@id/noButton"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/textAlert"
                android:background="@drawable/cornered_button"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textAllCaps="false" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>