<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_noteTitle_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/note_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_noteDetail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_noteTitle_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_noteTitle_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dateAdded_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_noteTitle_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_noteDetail_id"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_delete"
        app:layout_constraintTop_toTopOf="@+id/tv_dateAdded_id"
        app:srcCompat="@drawable/icon_item_edit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_noteTitle_id"
        app:layout_constraintTop_toTopOf="@+id/iv_edit"
        app:srcCompat="@drawable/icon_item_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>